# adaptive_landmarks

./: .gitignore  README.md  run-container.sh
catkin_ws/src/adaptive_landmarks/: CMakeLists.txt  package.xml
catkin_ws/src/adaptive_landmarks/msg/: Markers.msg  Rgb.msg
catkin_ws/src/adaptive_landmarks/src/: adaptive_color.py  adaptive_color_node.py  blob_detector.py  blob_detector_node.py  controller.py  controller_node.py
catkin_ws/src/loco_pilot/: .gitignore  CMakeLists.txt  README.md  package.xml
catkin_ws/src/loco_pilot/launch/: autopilot_only.launch  autopilot_with_primatives.launch
catkin_ws/src/loco_pilot/msg/: Command.msg
catkin_ws/src/loco_pilot/src/: controller.py  motion_primatives_server.py  pilot.py
catkin_ws/src/loco_pilot/srv/: Circle.srv  Pitch.srv  Saw.srv  Square.srv  Thrust.srv  Yaw.srv
catkin_ws/src/robot_meta/: CMakeLists.txt  package.xml
catkin_ws/src/robot_meta/launch/: detect_and_move.launch  detect_only.launch
