<?xml version="1.0"?>
<package format="2">
  <name>adaptive_landmarks</name>
  <version>0.0.0</version>
  <description>The adaptive_landmarks package</description>

  <maintainer email="knuts983@umn.edu">corey</maintainer>

  <license>GPLv3</license>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>rospy</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_runtime</exec_depend>


</package>
